--- a/Minecraft_QQ_Gui/MessageWindow.xaml
+++ b/Minecraft_QQ_Gui/MessageWindow.xaml
@@ -1,13 +1,15 @@
-﻿<Window x:Class="Minecraft_QQ_Gui.InitWindow"
+﻿<Window x:Class="Minecraft_QQ_Gui.MessageWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Minecraft_QQ_Gui"
         mc:Ignorable="d"
-        Title="初始化" Height="166" Width="317" Icon="/Minecraft_QQ.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="MessageWindow" Height="200" Width="300">
     <Grid>
         <Rectangle Fill="#FFF4F4F5" Stroke="#FF5ABED6" StrokeThickness="2"/>
-        <TextBlock Text="Minecraft_QQ正在初始化" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>
+        <TextBlock Text="Text" Name="Text" FontSize="20" TextWrapping="Wrap"
+                   HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" Margin="10"/>
+
     </Grid>
 </Window>
