--- a/Minecraft_QQ_Gui/SetWindow/IDSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/IDSet.xaml
@@ -4,13 +4,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="ID设置" Height="75" Width="220" ResizeMode="NoResize" Background="White" Icon="/Minecraft_QQ.ico" KeyDown="TextBox_KeyDown">
+        Title="ID设置" Height="75" Width="220" ResizeMode="CanResize" Background="White" Icon="/Minecraft_QQ.ico" KeyDown="TextBox_KeyDown">
     <Grid>
         <Rectangle Fill="#FFF4F4F5" Stroke="#FF5ABED6" StrokeThickness="2"/>
         <Label Content="ID" Margin="10,6,0,0" 
                Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" HorizontalAlignment="Left" Width="29" Height="22" VerticalAlignment="Top"/>
-        <TextBox Margin="39,10,0,0" TextWrapping="NoWrap" Text="{Binding ID}" Foreground="Black"
-                 Background="#225EBDD3" HorizontalAlignment="Left" Width="158" Height="20" VerticalAlignment="Top"/>
+        <TextBox Margin="39,10,23,0" TextWrapping="NoWrap" Text="{Binding ID}" Foreground="Black"
+                 Background="#225EBDD3" Height="20" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
