--- a/Minecraft_QQ_Gui/SetWindow/PlayerSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/PlayerSet.xaml
@@ -4,25 +4,25 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="玩家设置" Height="140" Width="220" ResizeMode="NoResize" Background="White" Icon="/Minecraft_QQ.ico">
+        Title="玩家设置" Height="133" Width="220" ResizeMode="CanResize" Background="White" Icon="/Minecraft_QQ.ico">
     <Grid>
         <Rectangle Fill="#FFF4F4F5" Stroke="#FF5ABED6" StrokeThickness="2"/>
-        <Button Content="保存" Margin="139,81,0,0" HorizontalAlignment="Left" Width="53" Height="15" VerticalAlignment="Top"
-                Foreground="Black" IsDefault="True" Click="Button_Click"/>
+        <Button Content="保存" Margin="12,0,0,10" HorizontalAlignment="Left" Width="53"
+                Foreground="Black" IsDefault="True" Click="Button_Click" Height="15" VerticalAlignment="Bottom"/>
         <Label Content="QQ号" Margin="10,6,0,0" 
                Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" VerticalAlignment="Top" HorizontalAlignment="Left" Width="42"/>
-        <TextBox Margin="52,10,0,0" TextWrapping="NoWrap" Text="{Binding PlayerObj.QQ号}" 
-                 Foreground="Black" Background="#225EBDD3" HorizontalAlignment="Left" Width="140" Height="18" VerticalAlignment="Top"/>
-        <CheckBox Content="管理员" Margin="10,82,0,0" Name="Admin_C"
-                  Style="{DynamicResource Check}" IsChecked="{Binding PlayerObj.管理员}" Height="14" VerticalAlignment="Top" HorizontalAlignment="Left" Width="56"/>
+        <TextBox Margin="52,10,10,0" TextWrapping="NoWrap" Text="{Binding PlayerObj.QQ号}" 
+                 Foreground="Black" Background="#225EBDD3" Height="18" VerticalAlignment="Top"/>
+        <CheckBox Content="管理员" Margin="70,0,0,11" Name="Admin_C"
+                  Style="{DynamicResource Check}" IsChecked="{Binding PlayerObj.管理员}" HorizontalAlignment="Left" Width="56" Height="14" VerticalAlignment="Bottom"/>
         <Label Content="名字" Margin="14,31,0,0" 
                Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" VerticalAlignment="Top" HorizontalAlignment="Left" Width="34"/>
-        <TextBox Margin="52,35,0,0" TextWrapping="NoWrap" Text="{Binding PlayerObj.名字}" Foreground="Black" Height="18"
-                 Background="#225EBDD3" HorizontalAlignment="Left" Width="140" VerticalAlignment="Top"/>
+        <TextBox Margin="52,35,10,0" TextWrapping="NoWrap" Text="{Binding PlayerObj.名字}" Foreground="Black" Height="18"
+                 Background="#225EBDD3" VerticalAlignment="Top"/>
         <Label Content="昵称" Margin="12,55,0,0" 
                Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" VerticalAlignment="Top" HorizontalAlignment="Left" Width="38"/>
-        <TextBox Margin="52,59,0,0" TextWrapping="NoWrap" Text="{Binding PlayerObj.昵称}" Foreground="Black" Height="18"
-                 Background="#225EBDD3" VerticalAlignment="Top" HorizontalAlignment="Left" Width="140"/>
+        <TextBox Margin="52,59,10,0" TextWrapping="NoWrap" Text="{Binding PlayerObj.昵称}" Foreground="Black" Height="18"
+                 Background="#225EBDD3" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
