--- a/Minecraft_QQ_Gui/SetWindow/IDSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/IDSet.xaml
@@ -4,7 +4,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="ID设置" Height="75" Width="220" ResizeMode="CanResize" Background="White" Icon="/Minecraft_QQ.ico" KeyDown="TextBox_KeyDown">
+        Title="ID设置" MinHeight="75" MinWidth="220" ResizeMode="CanResize" Background="White" Icon="/Minecraft_QQ.ico" KeyDown="TextBox_KeyDown">
     <Grid>
         <Rectangle Fill="#FFF4F4F5" Stroke="#FF5ABED6" StrokeThickness="2"/>
         <Label Content="ID" Margin="10,6,0,0" 
