--- a/Minecraft_QQ_Gui/SetWindow/QQSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/QQSet.xaml
@@ -4,7 +4,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="QQ群设置" Height="95" Width="220" ResizeMode="CanResize" Background="White" Icon="/Minecraft_QQ.ico" KeyDown="Window_KeyDown">
+        Title="QQ群设置" MinHeight="95" MinWidth="220" ResizeMode="CanResize" Background="White" Icon="/Minecraft_QQ.ico" KeyDown="Window_KeyDown">
     <Grid>
         <Rectangle Fill="#FFF4F4F5" Stroke="#FF5ABED6" StrokeThickness="2"/>
         <Label Content="群号" Margin="10,6,0,0" 
