--- a/Minecraft_QQ_Gui/SetWindow/CommandSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/CommandSet.xaml
@@ -1,39 +1,104 @@
-﻿<Window x:Class="Minecraft_QQ_Gui.SetWindow.CommandSet"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-         Title="服务器指令设置" MinHeight="175" MinWidth="360" ResizeMode="CanResize" Background="White" Icon="/Minecraft_QQ.ico" Height="188">
+﻿<Window
+    x:Class="Minecraft_QQ_Gui.SetWindow.CommandSet"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="服务器指令设置"
+    Width="420"
+    Height="240"
+    MinWidth="360"
+    MinHeight="175"
+    Background="White"
+    Icon="/Minecraft_QQ.ico"
+    ResizeMode="CanResize"
+    mc:Ignorable="d">
     <Grid>
-        <Rectangle Fill="#FFF4F4F5" Stroke="#FF5ABED6" StrokeThickness="2"/>
-        <Label Content="触发" Margin="10,5,0,0" 
-               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBox Margin="44,9,150,0" TextWrapping="NoWrap" Text="{Binding Command.Check}" Foreground="Black" Background="#225EBDD3" Height="18" VerticalAlignment="Top"/>
-        <CheckBox Content="玩家使用" Margin="140,0,0,10"
-                  Style="{DynamicResource Check}" IsChecked="{Binding Command.Use}" HorizontalAlignment="Left" Width="70" Height="14" VerticalAlignment="Bottom"/>
-        <CheckBox Content="玩家发送" Margin="68,0,0,10"
-                  Style="{DynamicResource Check}" IsChecked="{Binding Command.Send}" HorizontalAlignment="Left" Width="70" Height="14" VerticalAlignment="Bottom"/>
-        <Label Content="指令" Margin="10,30,0,0" 
-               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBox Margin="44,34,150,43" TextWrapping="Wrap" Text="{Binding Command.Command}" Foreground="Black" Background="#225EBDD3"/>
-        <ListView Margin="219,5,10,10" Background="#22FFFFFF" Style="{DynamicResource ListViewStyle1}"
-                  x:Name="ServerList">
+        <Rectangle
+            Fill="#FFF4F4F5"
+            Stroke="#FF5ABED6"
+            StrokeThickness="2" />
+        <Label
+            Margin="10,5,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Background="#00898989"
+            Content="触发"
+            Foreground="Black"
+            Style="{DynamicResource Label}" />
+        <TextBox
+            Height="18"
+            Margin="44,9,150,0"
+            VerticalAlignment="Top"
+            Background="#225EBDD3"
+            Foreground="Black"
+            Text="{Binding Command.Check}"
+            TextWrapping="NoWrap" />
+        <CheckBox
+            Width="70"
+            Height="14"
+            Margin="140,0,0,10"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Bottom"
+            Content="玩家使用"
+            IsChecked="{Binding Command.Use}"
+            Style="{DynamicResource Check}" />
+        <CheckBox
+            Width="70"
+            Height="14"
+            Margin="68,0,0,10"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Bottom"
+            Content="玩家发送"
+            IsChecked="{Binding Command.Send}"
+            Style="{DynamicResource Check}" />
+        <Label
+            Margin="10,30,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Background="#00898989"
+            Content="指令"
+            Foreground="Black"
+            Style="{DynamicResource Label}" />
+        <TextBox
+            Margin="44,34,150,43"
+            Background="#225EBDD3"
+            Foreground="Black"
+            Text="{Binding Command.Command}"
+            TextWrapping="Wrap" />
+        <ListView
+            x:Name="ServerList"
+            Width="135"
+            Margin="0,5,10,10"
+            HorizontalAlignment="Right"
+            Background="#22FFFFFF"
+            Style="{DynamicResource ListViewStyle1}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="服务器列表" Width="100" DisplayMemberBinding="{Binding StringFormat=string}"/>
+                    <GridViewColumn
+                        Width="100"
+                        DisplayMemberBinding="{Binding StringFormat=string}"
+                        Header="服务器列表" />
                 </GridView>
             </ListView.View>
             <ListView.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="删除" Click="Delete"/>
-                    <MenuItem Header="修改" Click="Edit"/>
-                    <MenuItem Header="添加" Click="Add"/>
+                    <MenuItem Click="Delete" Header="删除" />
+                    <MenuItem Click="Edit" Header="修改" />
+                    <MenuItem Click="Add" Header="添加" />
                 </ContextMenu>
             </ListView.ContextMenu>
         </ListView>
-        <Button Content="保存" Margin="10,0,0,10" HorizontalAlignment="Left" Width="53" Height="15" VerticalAlignment="Bottom"
-                Foreground="Black" IsDefault="True" Click="Button_Click"/>
+        <Button
+            Width="53"
+            Height="15"
+            Margin="10,0,0,10"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Bottom"
+            Click="Button_Click"
+            Content="保存"
+            Foreground="Black"
+            IsDefault="True" />
 
     </Grid>
 </Window>
