--- a/Minecraft_QQ_Gui/SetWindow/MessageSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/MessageSet.xaml
@@ -1,22 +1,64 @@
-﻿<Window x:Class="Minecraft_QQ_Gui.SetWindow.MessageSet"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="消息设置" MinHeight="205" MinWidth="315" ResizeMode="CanResize" Background="White" Icon="/Minecraft_QQ.ico">
+﻿<Window
+    x:Class="Minecraft_QQ_Gui.SetWindow.MessageSet"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="消息设置"
+    Width="460"
+    Height="320"
+    MinWidth="315"
+    MinHeight="205"
+    Background="White"
+    Icon="/Minecraft_QQ.ico"
+    ResizeMode="CanResize"
+    mc:Ignorable="d">
     <Grid>
-        <Rectangle Fill="#FFF4F4F5" Stroke="#FF5ABED6" StrokeThickness="2"/>
-        <Button Content="保存" Margin="10,0,0,10" HorizontalAlignment="Left" Width="37"
-                Foreground="Black" IsDefault="True" Click="Button_Click" Height="15" VerticalAlignment="Bottom"/>
-        <Label Content="检测" Margin="10,6,0,0" 
-               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBox Margin="52,11,10,0" TextWrapping="NoWrap" Text="{Binding Server.Name}" Foreground="Black" 
-                 Background="#225EBDD3" Height="20" VerticalAlignment="Top"/>
-        <Label Content="回复" Margin="10,31,0,0" 
-               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" VerticalAlignment="Top" HorizontalAlignment="Left"/>
-        <TextBox Margin="52,37,10,10" TextWrapping="Wrap" Text="{Binding Server.Addr}" Foreground="Black" Background="#225EBDD3"
-                 AcceptsReturn="True"/>
+        <Rectangle
+            Fill="#FFF4F4F5"
+            Stroke="#FF5ABED6"
+            StrokeThickness="2" />
+        <Button
+            Width="37"
+            Height="15"
+            Margin="10,0,0,10"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Bottom"
+            Click="Button_Click"
+            Content="保存"
+            Foreground="Black"
+            IsDefault="True" />
+        <Label
+            Margin="10,6,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Background="#00898989"
+            Content="检测"
+            Foreground="Black"
+            Style="{DynamicResource Label}" />
+        <TextBox
+            Height="20"
+            Margin="52,11,10,0"
+            VerticalAlignment="Top"
+            Background="#225EBDD3"
+            Foreground="Black"
+            Text="{Binding Server.Name}"
+            TextWrapping="NoWrap" />
+        <Label
+            Margin="10,31,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Background="#00898989"
+            Content="回复"
+            Foreground="Black"
+            Style="{DynamicResource Label}" />
+        <TextBox
+            Margin="52,37,10,10"
+            AcceptsReturn="True"
+            Background="#225EBDD3"
+            Foreground="Black"
+            Text="{Binding Server.Addr}"
+            TextWrapping="Wrap" />
 
     </Grid>
 </Window>
