--- a/Minecraft_QQ_Gui/SetWindow/PlayerSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/PlayerSet.xaml
@@ -1,28 +1,94 @@
-﻿<Window x:Class="Minecraft_QQ_Gui.SetWindow.PlayerSet"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="玩家设置" MinHeight="152" MinWidth="258" ResizeMode="CanResize" Background="White" Icon="/Minecraft_QQ.ico">
+﻿<Window
+    x:Class="Minecraft_QQ_Gui.SetWindow.PlayerSet"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="玩家设置"
+    Width="258"
+    Height="152"
+    MinWidth="258"
+    MinHeight="152"
+    Background="White"
+    Icon="/Minecraft_QQ.ico"
+    ResizeMode="CanResize"
+    mc:Ignorable="d">
     <Grid>
-        <Rectangle Fill="#FFF4F4F5" Stroke="#FF5ABED6" StrokeThickness="2"/>
-        <Button Content="保存" Margin="12,0,0,10" HorizontalAlignment="Left" Width="53"
-                Foreground="Black" IsDefault="True" Click="Button_Click" Height="15" VerticalAlignment="Bottom"/>
-        <Label Content="QQ号" Margin="10,6,0,0" 
-               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" VerticalAlignment="Top" HorizontalAlignment="Left" Width="42"/>
-        <TextBox Margin="52,10,10,0" TextWrapping="NoWrap" Text="{Binding PlayerObj.QQ}" 
-                 Foreground="Black" Background="#225EBDD3" Height="18" VerticalAlignment="Top"/>
-        <CheckBox Content="管理员" Margin="70,0,0,11" Name="Admin_C"
-                  Style="{DynamicResource Check}" IsChecked="{Binding PlayerObj.IsAdmin}" HorizontalAlignment="Left" Width="56" Height="14" VerticalAlignment="Bottom"/>
-        <Label Content="名字" Margin="14,31,0,0" 
-               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" VerticalAlignment="Top" HorizontalAlignment="Left" Width="34"/>
-        <TextBox Margin="52,35,10,0" TextWrapping="NoWrap" Text="{Binding PlayerObj.Name}" Foreground="Black" Height="18"
-                 Background="#225EBDD3" VerticalAlignment="Top"/>
-        <Label Content="昵称" Margin="12,55,0,0" 
-               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" VerticalAlignment="Top" HorizontalAlignment="Left" Width="38"/>
-        <TextBox Margin="52,59,10,0" TextWrapping="NoWrap" Text="{Binding PlayerObj.Nick}" Foreground="Black" Height="18"
-                 Background="#225EBDD3" VerticalAlignment="Top"/>
+        <Rectangle
+            Fill="#FFF4F4F5"
+            Stroke="#FF5ABED6"
+            StrokeThickness="2" />
+        <Button
+            Width="53"
+            Height="15"
+            Margin="12,0,0,10"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Bottom"
+            Click="Button_Click"
+            Content="保存"
+            Foreground="Black"
+            IsDefault="True" />
+        <Label
+            Width="42"
+            Margin="10,6,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Background="#00898989"
+            Content="QQ号"
+            Foreground="Black"
+            Style="{DynamicResource Label}" />
+        <TextBox
+            Height="18"
+            Margin="52,10,10,0"
+            VerticalAlignment="Top"
+            Background="#225EBDD3"
+            Foreground="Black"
+            Text="{Binding PlayerObj.QQ}"
+            TextWrapping="NoWrap" />
+        <CheckBox
+            Name="Admin_C"
+            Width="56"
+            Height="14"
+            Margin="70,0,0,11"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Bottom"
+            Content="管理员"
+            IsChecked="{Binding PlayerObj.IsAdmin}"
+            Style="{DynamicResource Check}" />
+        <Label
+            Width="34"
+            Margin="14,31,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Background="#00898989"
+            Content="名字"
+            Foreground="Black"
+            Style="{DynamicResource Label}" />
+        <TextBox
+            Height="18"
+            Margin="52,35,10,0"
+            VerticalAlignment="Top"
+            Background="#225EBDD3"
+            Foreground="Black"
+            Text="{Binding PlayerObj.Name}"
+            TextWrapping="NoWrap" />
+        <Label
+            Width="38"
+            Margin="12,55,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Background="#00898989"
+            Content="昵称"
+            Foreground="Black"
+            Style="{DynamicResource Label}" />
+        <TextBox
+            Height="18"
+            Margin="52,59,10,0"
+            VerticalAlignment="Top"
+            Background="#225EBDD3"
+            Foreground="Black"
+            Text="{Binding PlayerObj.Nick}"
+            TextWrapping="NoWrap" />
 
     </Grid>
 </Window>
