--- a/Minecraft_QQ_Gui/SetWindow/QQSet.xaml
+++ b/Minecraft_QQ_Gui/SetWindow/QQSet.xaml
@@ -1,22 +1,69 @@
-﻿<Window x:Class="Minecraft_QQ_Gui.SetWindow.QQSet"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="QQ群设置" MinHeight="95" MinWidth="220" ResizeMode="CanResize" Background="White" Icon="/Minecraft_QQ.ico" KeyDown="Window_KeyDown">
+﻿<Window
+    x:Class="Minecraft_QQ_Gui.SetWindow.QQSet"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="QQ群设置"
+    Width="220"
+    Height="95"
+    MinWidth="220"
+    MinHeight="95"
+    Background="White"
+    Icon="/Minecraft_QQ.ico"
+    KeyDown="Window_KeyDown"
+    ResizeMode="CanResize"
+    mc:Ignorable="d">
     <Grid>
-        <Rectangle Fill="#FFF4F4F5" Stroke="#FF5ABED6" StrokeThickness="2"/>
-        <Label Content="群号" Margin="10,6,0,0" 
-               Style="{DynamicResource Label}" Foreground="Black" Background="#00898989" Height="24" VerticalAlignment="Top" HorizontalAlignment="Left" Width="34"/>
-        <TextBox Margin="44,10,10,0" TextWrapping="NoWrap" Text="{Binding Obj.Group}" Foreground="Black" 
-                 Background="#225EBDD3" Height="20" VerticalAlignment="Top"/>
-        <CheckBox Content="主群" Margin="150,35,0,0"
-                  Style="{DynamicResource Check}" IsChecked="{Binding Obj.IsMain}" Height="14" VerticalAlignment="Top" HorizontalAlignment="Left" Width="44"/>
-        <CheckBox Content="启用命令" Margin="10,35,0,0"
-                  Style="{DynamicResource Check}" IsChecked="{Binding Obj.EnableCommand}" Height="14" VerticalAlignment="Top" HorizontalAlignment="Left" Width="68"/>
-        <CheckBox Content="开启对话" Margin="80,35,0,0"
-                  Style="{DynamicResource Check}" IsChecked="{Binding Obj.EnableSay}" Height="14" VerticalAlignment="Top" HorizontalAlignment="Left" Width="68"/>
+        <Rectangle
+            Fill="#FFF4F4F5"
+            Stroke="#FF5ABED6"
+            StrokeThickness="2" />
+        <Label
+            Width="34"
+            Height="24"
+            Margin="10,6,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Background="#00898989"
+            Content="群号"
+            Foreground="Black"
+            Style="{DynamicResource Label}" />
+        <TextBox
+            Height="20"
+            Margin="44,10,10,0"
+            VerticalAlignment="Top"
+            Background="#225EBDD3"
+            Foreground="Black"
+            Text="{Binding Obj.Group}"
+            TextWrapping="NoWrap" />
+        <CheckBox
+            Width="44"
+            Height="14"
+            Margin="150,35,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Content="主群"
+            IsChecked="{Binding Obj.IsMain}"
+            Style="{DynamicResource Check}" />
+        <CheckBox
+            Width="68"
+            Height="14"
+            Margin="10,35,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Content="启用命令"
+            IsChecked="{Binding Obj.EnableCommand}"
+            Style="{DynamicResource Check}" />
+        <CheckBox
+            Width="68"
+            Height="14"
+            Margin="80,35,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Content="开启对话"
+            IsChecked="{Binding Obj.EnableSay}"
+            Style="{DynamicResource Check}" />
 
     </Grid>
 </Window>
