--- a/Minecraft_QQ.NewGui/Controls/CommandSetControl.axaml
+++ b/Minecraft_QQ.NewGui/Controls/CommandSetControl.axaml
@@ -1,10 +1,10 @@
 <UserControl
-    x:Class="Minecraft_QQ.NewGui.Controls.CommandSetControl"
+    x:Class="Minecraft_QQ_NewGui.Controls.CommandSetControl"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:vm="using:Minecraft_QQ.NewGui.ViewModels"
+    xmlns:vm="using:Minecraft_QQ_NewGui.ViewModels"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
