--- a/Minecraft_QQ.NewGui/Style/Button.axaml
+++ b/Minecraft_QQ.NewGui/Style/Button.axaml
@@ -1,7 +1,7 @@
 ﻿<Styles
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:setting="clr-namespace:Minecraft_QQ.NewGui.UISetting">
+    xmlns:setting="clr-namespace:Minecraft_QQ_NewGui.UISetting">
     <Design.PreviewWith>
         <Border Padding="20">
             <StackPanel Background="Black">
